Support merge in Postgresql connector